<resources>
    <string name="app_name">TouchDroid</string>
    <string name="enterIp">Enter IP of Destination</string>
    <string name="enterPort">Enter Port of Destination Server</string>
    <string name="btnConnect">Connect</string>
    <string name="waiting">Waiting…</string>
    <string name="leftBtn">Left\nButton</string>
    <string name="rightBtn">Right\nButton</string>
    <string name="hrLine">__________</string>
    <string name="wheelString">Scroll Wheel</string>
    <string name="turn_wifi_on">Turn Wifi On</string>
    <string name="turn_wifi_off">Turn Wifi Off</string>
    <string name="enter_manual_ip">Enter Manual IP</string>
    <string name="IPinput">_ _ _ . _ _ _ . _ _ _ . _ _ _</string>
    <string name="copyright">Powered BY <b>©The Akshay</b><br /> Partnered with <b>©SKRInternationals</b></string>
    <string name="instruction">Waiting for <b>MouseRemoteServer.exe</b> to run on Host device… <br /> Download it from <br /> https://github.com/Akshayaap/MouseRemoteServer</string>
    <string name="scan">Scan</string>
    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="right">→</string>
    <string name="left">←</string>
    <string name="prtscr">Prt Scr</string>
    <string name="insert">Ins</string>
    <string name="dot">.</string>
    <string name="comma">,</string>
    <string name="slash">/</string>
    <string name="windows">win</string>
    <string name="ctrl">Ctrl</string>
    <string name="alt">Alt</string>
    <string name="space">Space</string>
    <string name="shift">Shift</string>
    <string name="z">Z</string>
    <string name="m">M</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="v">V</string>
    <string name="n">N</string>
    <string name="x">X</string>
    <string name="enter">Enter</string>
    <string name="semicolon">;</string>
    <string name="quote">\'</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="j">J</string>
    <string name="f">F</string>
    <string name="k">K</string>
    <string name="g">G</string>
    <string name="l">L</string>
    <string name="h">H</string>
    <string name="d">D</string>
    <string name="backslash">\\</string>
    <string name="sq_braces_open">[</string>
    <string name="sq_braces_close">]</string>
    <string name="q">Q</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="p">P</string>
    <string name="o">O</string>
    <string name="e">E</string>
    <string name="i">I</string>
    <string name="r">R</string>
    <string name="w">W</string>
    <string name="u">U</string>
    <string name="underscore">_</string>
    <string name="equals">=</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="tiddle">~</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="tab">Tab</string>
    <string name="caps">Caps</string>
    <string name="delete">Del</string>
    <string name="backspace">←</string>
    <string name="_0">0</string>
    <string name="menu_network">Network</string>
    <string name="menu_touchpad">TouchPad</string>
    <string name="menu_keyboard">Keyboard</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_debug">Debug</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="touchdriod">TouchDroid</string>
</resources>