<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_network"
        android:icon="@drawable/round_wifi_24"
        android:title="@string/menu_network" />
    <item
        android:id="@+id/nav_touchpad"
        android:icon="@drawable/ic_baseline_mouse_24"
        android:title="@string/menu_touchpad" />
    <item
        android:id="@+id/nav_keyboard"
        android:icon="@drawable/ic_keyboard"
        android:title="@string/menu_keyboard" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_port_keyboard"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_debug"
        android:icon="@drawable/adb"
        android:title="@string/menu_debug" />
</menu>